RESOLVED FIXED267357
[Wasm-GC] Fix recursive return type index for struct.new_default
https://bugs.webkit.org/show_bug.cgi?id=267357
Summary [Wasm-GC] Fix recursive return type index for struct.new_default
Asumu Takikawa
Reported 2024-01-10 12:33:04 PST
Minimal test case (goes in `structs.js` test): ``` compile(` (module (rec (type (struct (field (ref null 0))))) (func (param (ref null 0))) (func (struct.new_default 0 (ref.null 0)) (call 0)) ) `); ``` errors with `wasm.yaml/wasm/gc/structs.js.wasm-no-cjit: ASSERTION FAILED: subRTT.has_value() && parentRTT.has_value()` The cause is there's a type expansion done at the wrong time in validation for `struct.new_default`, and has a very simple fix.
Attachments
Asumu Takikawa
Comment 1 2024-01-10 13:39:43 PST
EWS
Comment 2 2024-01-11 14:44:47 PST
Committed 272941@main (1619546caa40): <https://commits.webkit.org/272941@main> Reviewed commits have been landed. Closing PR #22615 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-01-11 14:45:16 PST
Note You need to log in before you can comment on or make changes to this bug.