[Wasm-GC] Fix recursive return type index for struct.new_default https://bugs.webkit.org/show_bug.cgi?id=267357

Reviewed by Justin Michaud.

Expands the type in the correct place now in validating struct.new_default.

* JSTests/wasm/gc/structs.js:
(testStructNewDefault):
* Source/JavaScriptCore/wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::parseExpression):

Canonical link: https://commits.webkit.org/272941@main